--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
 
+
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="dot_margin_right">10dp</dimen>
     <dimen name="msg_no_notes">26sp</dimen>
@@ -20,4 +21,5 @@
     <dimen name="card_margin">2dp</dimen>
     <dimen name="card_album_radius">0dp</dimen>
 
+    <dimen name="small_margin_padding">5dp</dimen>
 </resources>
